# fuzzy-ga

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 01_explore.ipynb
src/jssp_fuzzy_ga/: core.py  experiment.py  expirement.py  fuzzy.py  plotting.py
