
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jssp-fuzzy-ga"
version = "0.1.0"
description = "Explainable adaptive mutation control in GAs: a fuzzy logic approach to job-shop scheduling"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["src"]
